--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "urn-trx"]
 	path = urn-trx
 	url = git@bitbucket.org:nbl7/urn-trx.git
+[submodule "urn-mdls"]
+	path = urn-mdls
+	url = git@bitbucket.org:nbl7/urn-mdls.git
