--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "urn-mdls"]
 	path = urn-mdls
 	url = git@bitbucket.org:nbl7/urn-mdls.git
+[submodule "urn-core"]
+	path = urn-core
+	url = git@bitbucket.org:nbl7/urn-core.git
