--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "urn-cli"]
 	path = urn-cli
 	url = git@bitbucket.org:nbl7/urn-cli.git
+[submodule "urn-bld"]
+	path = urn-bld
+	url = git@bitbucket.org:nbl7/urn-bld.git
