--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,25 @@
 [submodule "urn-dev"]
 	path = urn-dev
 	url = git@bitbucket.org:nbl7/urn-dev.git
+	branch = master
+	update = merge
 [submodule "urn-lib"]
 	path = urn-lib
 	url = git@bitbucket.org:nbl7/urn-lib.git
+	branch = master
+	update = merge
 [submodule "urn-dot"]
 	path = urn-dot
 	url = ssh://git@bitbucket.org/nbl7/urn-dot.git
+	branch = master
+	update = merge
 [submodule "urn-cli"]
 	path = urn-cli
 	url = ssh://git@bitbucket.org/nbl7/urn-cli.git
+	branch = master
+	update = merge
 [submodule "urn-bld"]
 	path = urn-bld
 	url = ssh://git@bitbucket.org/nbl7/urn-bld.git
+	branch = master
+	update = merge
