--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,18 @@
 	url = ssh://git@bitbucket.org/nbl7/urn-bld.git
 	branch = master
 	update = merge
+[submodule "urn-core"]
+	path = urn-core
+	url = ssh://git@bitbucket.org/nbl7/urn-core.git
+	branch = master
+	update = rebase
+[submodule "urn-web"]
+	path = urn-web
+	url = ssh://git@bitbucket.org/nbl7/urn-web.git
+	branch = master
+	update = rebase
+[submodule "urn-fnc"]
+	path = urn-fnc
+	url = ssh://git@bitbucket.org/nbl7/urn-fnc.git
+	branch = master
+	update = rebase
