--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,8 @@
 	url = ssh://git@bitbucket.org/nbl7/urn-fnc.git
 	branch = master
 	update = rebase
+[submodule "urn-ntl"]
+	path = urn-ntl
+	url = ssh://git@bitbucket.org/nbl7/urn-ntl.git
+	branch = master
+	update = rebase
