--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,7 @@
 	url = ssh://git@bitbucket.org/nbl7/urn-ntl.git
 	branch = master
 	update = rebase
+[submodule "urn-api"]
+	path = urn-api
+	url = git+ssh://git@bitbucket.org/nbl7/urn-api.git
+	branch = master
