--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,8 @@
 	path = urn-api
 	url = git+ssh://git@bitbucket.org/nbl7/urn-api.git
 	branch = master
+[submodule "urn-trx"]
+	path = urn-trx
+	url = git+ssh://git@bitbucket.org/nbl7/urn-trx.git
+	branch = master
+	update = rebase
