added submodule urn-ass.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,6 +25,6 @@
 	update = rebase
 [submodule "urn-ass"]
 	path = urn-ass
-	url = git+ssh://git@github.com/nbl7/uranio-assets.git
+	url = ssh+git://git@github.com/nbl7/uranio-assets.git
 	branch = master
 	update = rebase
