removed submodule from urn-dot. added submodule in urn-dep.

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,8 @@
 	url = git+ssh://git@github.com/nbl7/uranio-schema.git
 	branch = master
 	update = rebase
+[submodule "urn-dep/urn-adm-dep-dev"]
+	path = urn-dep/urn-adm-dep-dev
+	url = git+ssh://git@github.com/nbl7/uranio-adm-dep-dev.git
+	branch = master
+	update = rebase
