updated package.json to x71c9.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "uranio",
-  "uranio": true,
-  "private": true,
-  "devDependencies": {
-    "lerna": "^3.22.1"
-  }
+	"name": "uranio-monorepo",
+	"uranio": true,
+	"private": true,
+	"author": "Andrea Reni <108585118+x71c9@users.noreply.github.com>",
+	"devDependencies": {
+		"lerna": "^3.22.1"
+	}
 }
