Added submodule urn-ass

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-api.git
 	branch = master
 	update = rebase
+[submodule "urn-ass"]
+	path = urn-ass
+	url = git+ssh://git@github.com/x71c9/uranio-assets.git
+	branch = master
+	update = rebase
