Added submodule urn-core

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-cli.git
 	branch = master
 	update = rebase
+[submodule "urn-core"]
+	path = urn-core
+	url = git+ssh://git@github.com/x71c9/uranio-core.git
+	branch = master
+	update = rebase
