Added submodule urn-sync

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-trx.git
 	branch = master
 	update = rebase
+[submodule "urn-sync"]
+	path = urn-sync
+	url = git+ssh://git@github.com/x71c9/uranio-sync
+	branch = master
+	update = rebase
