--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-sync
 	branch = master
 	update = rebase
+[submodule "urn-cicd"]
+	path = urn-cicd
+	url = git+ssh://git@github.com/x71c9/uranio-cicd
+	branch = master
+	update = rebase
