--- a/.gitmodules
+++ b/.gitmodules
@@ -63,3 +63,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-cicd
 	branch = master
 	update = rebase
+[submodule "urn-docker"]
+	path = urn-docker
+	url = git+ssh://git@github.com/x71c9/uranio-docker
+	branch = master
+	update = rebase
