Added submodule urn-dep/urn-core-dep-dev

--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,8 @@
 	url = git+ssh://git@github.com/x71c9/uranio-utils
 	branch = master
 	update = rebase
+[submodule "urn-dep/urn-core-dep-dev"]
+	path = urn-dep/urn-core-dep-dev
+	url = git+ssh://git@github.com/x71c9/uranio-core-dep-dev
+	branch = master
+	update = rebase
