--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,10 +15,28 @@
   },
   "scripts": {
     "build": "yarn tsc -b",
-    "dev": "yarn tsc -w"
+    "dev": "yarn tsc -w",
+    "dev:base": "node ./dist/index.js",
+    "dev:bin": "node ./dist/bin.js",
+    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:bin\""
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "tsc-watch": "^6.0.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "husky": "^8.0.3",
+    "i0n": "^0.7.3",
+    "plutonio": "^0.2.2"
   }
 }
