--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,10 @@
     "dev": "yarn tsc -w",
     "dev:base": "node ./dist/index.js",
     "dev:bin": "node ./dist/bin.js",
-    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:bin\""
+    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:bin\"",
+    "push:patch": "sh ./scripts/version.sh patch",
+    "push:minor": "sh ./scripts/version.sh minor",
+    "push:major": "sh ./scripts/version.sh major"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
