--- a/.uranio/package.json
+++ b/.uranio/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "client",
-  "version": "1.0.0",
+  "name": "uranio-client",
   "main": "dist/index.js",
-  "license": "MIT",
   "scripts": {
     "build": "yarn tsc -b",
     "dev": "yarn tsc -w"
