--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "app-root-path": "^3.1.0",
     "i0n": "^0.8.1",
     "mongodb": "^6.3.0",
+    "mysql2": "^3.7.0",
     "plutonio": "^0.5.1",
     "r4y": "^0.6.0"
   }
