--- a/.uranio/package.json
+++ b/.uranio/package.json
@@ -5,7 +5,9 @@
     "build": "yarn tsc -b",
     "dev": "yarn tsc -w",
     "dev:base": "node -r source-map-support/register -r dotenv/config ./dist/run.js",
-    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:base\""
+    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:base\"",
+    "dev:test": "node --loader tsx --test --test-reporter spec --watch ./tests/*.test.ts",
+    "test": "node --no-warnings --loader tsx --test --test-reporter spec tests/**/*test.ts"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
@@ -22,6 +24,7 @@
     "prettier": "^3.1.1",
     "source-map-support": "^0.5.21",
     "tsc-watch": "^6.0.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
