--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dev": "yarn tsc -w",
     "dev:base": "node ./dist/index.js",
     "dev:bin": "node ./dist/bin.js generate --root ~/repos/uranio/builder",
-    "dev:bin:verbose": "node ./dist/bin.js generate -v -d mysql --root ~/repos/uranio/builder",
+    "dev:bin:verbose": "node ./dist/bin.js generate -v -d mysql --root ~/repos/avk-47/core",
     "dev:bin:version": "node ./dist/bin.js --root ~/repos/uranio/builder",
     "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:bin\"",
     "dev:run:verbose": "yarn tsc-watch --onSuccess \"yarn dev:bin:verbose\"",
