--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "yarn tsc -b",
     "dev": "yarn tsc -w",
     "dev:base": "node ./dist/index.js",
-    "dev:bin:generate": "node ./dist/bin.js generate --root ~/repos/avk-47/core",
+    "dev:bin:generate": "node ./dist/bin.js generate --root ~/repos/uranio/builder",
     "dev:bin:init": "node ./dist/bin.js init",
     "dev:bin:verbose": "node ./dist/bin.js generate -v -d mysql --root ~/repos/avk-47/core",
     "dev:bin:version": "node ./dist/bin.js --root ~/repos/uranio/builder",
@@ -61,7 +61,7 @@
     "inquirer": "^8.0.0",
     "mongodb": "^6.3.0",
     "mysql2": "^3.7.0",
-    "plutonio": "^0.6.3",
+    "plutonio": "^0.6.4",
     "r4y": "^0.6.0",
     "yaml": "^2.3.4"
   }
