--- a/package.json
+++ b/package.json
@@ -56,15 +56,31 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.969.0",
-    "@aws-sdk/util-dynamodb": "^3.969.0",
     "app-root-path": "^3.1.0",
     "i0n": "^0.9.0",
     "inquirer": "^8.2.6",
-    "mongodb": "^7.0.0",
-    "mysql2": "^3.16.0",
     "plutonio": "^0.7.2",
     "r4y": "^0.9.0",
     "yaml": "^2.8.2"
+  },
+  "peerDependencies": {
+    "mongodb": ">=7.0.0",
+    "mysql2": ">=3.16.0",
+    "@aws-sdk/client-dynamodb": ">=3.969.0",
+    "@aws-sdk/util-dynamodb": ">=3.969.0"
+  },
+  "peerDependenciesMeta": {
+    "mongodb": {
+      "optional": true
+    },
+    "mysql2": {
+      "optional": true
+    },
+    "@aws-sdk/client-dynamodb": {
+      "optional": true
+    },
+    "@aws-sdk/util-dynamodb": {
+      "optional": true
+    }
   }
 }
