chore: replace app-root-path with pkg-dir for symlink support

--- a/.uranio/package.json
+++ b/.uranio/package.json
@@ -22,6 +22,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.995.0",
+    "@aws-sdk/util-dynamodb": "^3.995.0",
+    "mongodb": "^7.1.0",
+    "mysql2": "^3.17.5",
     "uranio": "1.0.6"
   }
 }
